# archive_manager

./: Cargo.toml
src/: archive.rs  main.rs
ui/: app-window.slint
