[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.5"
chrono = "0.4.39"
rayon = "1.10.0"
rfd = "0.15.1"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
slint = "1.8.0"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.8.0"
